--- a/sass/partials/_fonts.scss
+++ b/sass/partials/_fonts.scss
@@ -1,4 +1,3 @@
-//@import url(http://fonts.googleapis.com/css?family=Gilda+Display);
 @font-face {
   font-family:'icomoon';src:url("fonts/icomoon.eot");src:url("fonts/icomoon.eot?#iefix") format("embedded-opentype"),url("fonts/icomoon.woff") format("woff"),url("fonts/icomoon.ttf") format("truetype"),url("fonts/icomoon.svg#icomoon") format("svg");font-weight:normal;font-style:normal;
 }
@@ -14,4 +13,9 @@
   -webkit-font-smoothing: antialiased;
 }
 
-$text-shadow: .25px .25px .25px #000;
+body {font-family: source-sans-pro, helvetica, serif;
+			font-weight: 300;
+			font-size: 100%;
+			line-height: 1.687em;}
+
+$text-shadow: .2px .2px .05px #000;
