--- a/sass/partials/_state.scss
+++ b/sass/partials/_state.scss
@@ -1,11 +1,16 @@
 @import "colors";
-.contact a:hover {@include scale(1.3);
+
+.contact a:hover, a:hover {
+									-webkit-transition: all 0.2s ease-out;
+										 -moz-transition: all 0.2s ease-out;  
+											 -o-transition: all 0.2s ease-out;  
+												  transition: all 0.2s ease-out;
 									color: $color-a-transition;
-	 }	
+	 }
 
-$breakpoint-xs: 26.222em;
-$breakpoint-sm: 27em;
-$breakpoint-m: 38em;
-$breakpoint-lg: 48em;
-
+$bp-xs: 25em;
+$bp-sm: 27em;
+$bp-m: 35em;
+$bp-lg: 48em;
+$bp-xl: 70em;
 .gn {display: none;}
