--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,1 +1,89 @@
-@charset "UTF-8";html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,footer,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,footer,hgroup,menu,nav,section,summary{display:block}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}body{margin:0 auto;width:100%;max-width:1024px}.logo{float:left;padding-left:5%;text-decoration:none}.logo a{text-decoration:none;color:white}.header{overflow:hidden;*zoom:1;margin:0 auto;background-color:#2c3e50;padding:1.618em 0em 1.618em 0em;text-transform:uppercase;text-align:center}.nav-hdr{line-height:1.8em;font-size:124%}.nav-hdr a{text-decoration:none;display:block;color:rgba(255,255,255,0.975)}.nav-hdr li{padding-left:5%;text-transform:uppercase}.nav-hdr li:hover{color:rgba(255,24,0,0.77);opacity:.875}.nav-hdr li:first-child{background-color:#809cb9}.nav-hdr li:last-child{background-color:#56799c}.nav-top a{color:rgba(255,255,255,0.975);text-decoration:none}.nav-toggle{float:right;padding:0em .9em 0em .9em;text-shadow:0.9px 0.9px 0.9px #95a5a6}.nav-toggle:after{content:"▼";padding-left:.15em}footer{color:white}footer nav{opacity:.4}.main{background-color:#fefff9}.card,.work,.twts,.contact{padding:1.618em .5em 1.618em .5em;text-decoration:none;-webkit-box-shadow:inset .1px .2px 2px 0px #34495e;box-shadow:inset .1px .2px 2px 0px #34495e}.work li{text-align:center;list-style:none;margin:2em auto;padding:.3em 0em .3em 0em;width:60%;border-bottom:1px solid #fff;background-color:#f7f7f7;-webkit-box-shadow:6px 8px 1px -1px #c9c9c9;box-shadow:6px 8px 1px -1px #c9c9c9}.work li:active{-webkit-transform:scale(1.029, 1.029);-moz-transform:scale(1.029, 1.029);-ms-transform:scale(1.029, 1.029);-o-transform:scale(1.029, 1.029);transform:scale(1.029, 1.029);opacity:.9}.work a{text-decoration:none;padding:.1em 3.3em .1em 3.3em}#twitter-widget-0{display:block;margin:0 auto}.contact li{display:inline-block}.contact a{font-size:2.6em;text-decoration:none;color:rgba(255,151,0,0.79);padding:.325em;margin:.12em}.gn{display:none}.transition,.nav-hdr,.nav-hdr li:hover,.work li:active,.contact a,.contact a:hover,.nav-hdr a:hover{-webkit-transition:all 0.8s ease-out;-moz-transition:all 0.8s ease-out;-o-transition:all 0.8s ease-out;transition:all 0.8s ease-out}.contact a:hover,.nav-hdr a:hover{color:rgba(255,24,0,0.77)}.txt-shad,.nav-hdr,footer{text-shadow:0.9px 0.9px 0.9px #95a5a6}@font-face{font-family:'icomoon';src:url("fonts/icomoon.eot");src:url("fonts/icomoon.eot?#iefix") format("embedded-opentype"),url("fonts/icomoon.woff") format("woff"),url("fonts/icomoon.ttf") format("truetype"),url("fonts/icomoon.svg#icomoon") format("svg");font-weight:normal;font-style:normal}[data-icon]:before{font-family:'icomoon';content:attr(data-icon);speak:none;font-weight:normal;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased}html{font-family:source-sans-pro, helvetica, serif;font-weight:300;font-size:100%;line-height:1.5em}@media (min-width: 17.573em){html{font-size:115%}}@media (min-width: 27em){html{font-size:130%}}@media (min-width: 35em){html{font-size:145%}}@media (min-width: 48em){html{font-size:170%}}@media (min-width: 70em){html{font-size:185%}}h1{color:white;font-size:150%;text-transform:uppercase;text-decoration:none;text-shadow:0.9px 0.9px 0.9px #95a5a6}
+/*
+Syntax error: File to import not found or unreadable: color-schemer.
+              Load paths:
+                /home/rj/Documents/Projects/PlayGround/test/test/sass
+                /var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/blueprint/stylesheets
+                /var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets
+                /var/lib/gems/1.9.1/gems/bearded_grid-0.0.4/stylesheets
+                Compass::SpriteImporter
+        on line 7 of /home/rj/Documents/Projects/PlayGround/test/test/sass/partials/_base.scss
+        from line 15 of /home/rj/Documents/Projects/PlayGround/test/test/sass/style.scss
+
+Backtrace:
+/home/rj/Documents/Projects/PlayGround/test/test/sass/partials/_base.scss:7
+/home/rj/Documents/Projects/PlayGround/test/test/sass/style.scss:15
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/import_node.rb:45:in `import'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/import_node.rb:28:in `imported_file'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/import_node.rb:37:in `css_import?'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:217:in `visit_import'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:227:in `block in visit_import'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:227:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:227:in `visit_import'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:53:in `map'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:128:in `visit_root'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/base.rb:37:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:100:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/visitors/perform.rb:7:in `visit'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/tree/root_node.rb:20:in `render'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/engine.rb:315:in `_render'
+/var/lib/gems/1.9.1/gems/sass-3.2.12/lib/sass/engine.rb:262:in `render'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:140:in `block (2 levels) in compile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:139:in `block in compile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/logger.rb:45:in `red'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:138:in `compile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:103:in `block (2 levels) in run'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `each'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:101:in `block in run'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:147:in `recompile'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:95:in `block (4 levels) in perform'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `call'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `run_callback'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:55:in `callback_action'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/path.rb:39:in `delete'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:32:in `block in deleted'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:31:in `each'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:31:in `deleted'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/state/directory.rb:16:in `refresh'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/inotify.rb:12:in `block in add_handler'
+/usr/lib/ruby/vendor_ruby/rb-inotify/notifier.rb:200:in `call'
+/usr/lib/ruby/vendor_ruby/rb-inotify/notifier.rb:200:in `block in watch'
+/usr/lib/ruby/vendor_ruby/rb-inotify/watcher.rb:41:in `[]'
+/usr/lib/ruby/vendor_ruby/rb-inotify/watcher.rb:41:in `callback!'
+/usr/lib/ruby/vendor_ruby/rb-inotify/event.rb:128:in `callback!'
+/usr/lib/ruby/vendor_ruby/rb-inotify/notifier.rb:233:in `block in process'
+/usr/lib/ruby/vendor_ruby/rb-inotify/notifier.rb:233:in `each'
+/usr/lib/ruby/vendor_ruby/rb-inotify/notifier.rb:233:in `process'
+/usr/lib/ruby/vendor_ruby/rb-inotify/notifier.rb:216:in `run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/backends/inotify.rb:20:in `run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm/monitor.rb:26:in `run'
+/var/lib/gems/1.9.1/gems/fssm-0.2.10/lib/fssm.rb:70:in `monitor'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/watch_project.rb:87:in `perform'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/bin/compass:30:in `block in <top (required)>'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `call'
+/var/lib/gems/1.9.1/gems/compass-0.12.2/bin/compass:44:in `<top (required)>'
+/usr/local/bin/compass:23:in `load'
+/usr/local/bin/compass:23:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: File to import not found or unreadable: color-schemer.\A               Load paths:\A                 /home/rj/Documents/Projects/PlayGround/test/test/sass\A                 /var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/blueprint/stylesheets\A                 /var/lib/gems/1.9.1/gems/compass-0.12.2/frameworks/compass/stylesheets\A                 /var/lib/gems/1.9.1/gems/bearded_grid-0.0.4/stylesheets\A                 Compass::SpriteImporter\A         on line 7 of /home/rj/Documents/Projects/PlayGround/test/test/sass/partials/_base.scss\A         from line 15 of /home/rj/Documents/Projects/PlayGround/test/test/sass/style.scss"; }
