--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,387 +1,13 @@
-/********** Imports **********/
-
 @import "compass";
 @import "compass/reset";
 @import "compass/css3";
 @import "compass/utilities";
 
-/********** Varibles **********/
-
-$text-shadow: .9px .9px .9px rgba(149, 165, 166,1.0);
-$text-shadow-toggle-hover: 1.1px 1.1px 9.1px rgba(241, 250, 19,1.0);
-
-$bp-xs: 15.75em;
-$bp-sm: 20em;
-$bp-m: 30em;
-$bp-lg: 47.5em;
-$bp-xl: 62em;
-$bp-xxl: 70em;
-
-$color-h2: rgba(0,10,150,.6);
-$color-a-transition: rgba(255, 24, 0,.77);
-$color-work: rgba(20,134,242,.91);
-$color-header: #2c3e50;
-$color-main-background: #D3E0E0;
-
-/********* Mixins *********/
-
-@mixin mq($size) {
-  @if $size == xs {
-    @media screen and (min-width: $bp-xs) {@content}}
-  @else if $size == sm {
-    @media screen and (min-width: $bp-sm) {@content}}
-  @else if $size == m {
-    @media screen and (min-width: $bp-m) {@content}}
-  @else if $size == ml {
-    @media screen and (min-width: $bp-xs) and (max-width: $bp-lg) {@content}}  
-  @else if $size == lg {
-    @media screen and (min-width: $bp-lg) {@content}}
-  @else if $size == xl {
-    @media screen and (min-width: $bp-xl) {@content}}
-  @else if $size == xxl {
-    @media screen and (min-width: $bp-xxl) {@content}}
-  }
-  
-/********** Layout **********/
-
-$gutter_width: 3.5%;
-$columns: 12;
-$column_width: 5.125%;
-$grid_width: ((($column_width+($gutter_width))*$columns)-$gutter_width);
- 
- %g-1 {
-  width: auto;
-  padding-left: .5em;
-  padding-right: .5em;
-}
-
-%g-1-3 {
-  width: 33%;
-}
-
-%g-2-3 {
-  width: 66%;
-}
-
-%g-1-4 {
-  width: 25%;
-  }  
-
-%g-2-4 {
-  width: 50%;
-}  
-
-%g-3-4 {
-  width: 75%;
-}
-
-%g-last {
-  padding: .5em; 
-}
-
-/********** Fonts **********/
-
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
-
-@font-face {
-  font-family:'icomoon';src:url("fonts/icomoon.eot");src:url("fonts/icomoon.eot?#iefix") format("embedded-opentype"),url("fonts/icomoon.woff") format("woff"),url("fonts/icomoon.ttf") format("truetype"),url("fonts/icomoon.svg#icomoon") format("svg");font-weight:normal;font-style:normal;
-}
-
-[data-icon]:before {
-  font-family: 'icomoon';
-  content: attr(data-icon);
-  speak: none;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-}
-
-html {
-    font-family: 'Open Sans Condensed', georgia, helvetica, serif; 
-    font-weight: 300;
-    font-size: 100%;
-    line-height: 1.5em;
-    letter-spacing: .05em;
-}                                                           
-h1 {
-    color: white;
-    font-size: 1.6em;
-    text-transform: uppercase;
-    text-shadow: $text-shadow;
-}
-
-h2 {
-    text-align:center;
-    color: red;
-    letter-spacing: .206em;
-    line-height: 3.8em;
-    font-size: 1.6em;
-    text-transform: uppercase;
-    text-shadow: $text-shadow;
-}
-
-h3 {
-    text-align:center;
-    color: rgba(250,10,10,.9);
-    letter-spacing: .103em;
-    line-height: 2.8;
-    font-size: 1.1em;
-    text-transform: uppercase;
-    text-shadow: $text-shadow;
-}
-
-/********** Transitions/Animations **********/
-
- %transition {transition: all 0.7s ease-out;}
-
- @keyframes line {
-    0%{ transform: scale(1);}
-    25%{ transform: scale(1.1);}
-    50%{ transform: scale(1);}
-    75%{ transform: scale(1.1);}
-    100%{ transform: scale(1);}
-}
-
-/********** Base **********/
-
-* {@include box-sizing('border-box');}
-
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-header {
-    @include clearfix;
-    background-color: $color-header; 
-    padding: 3% 1.5% 3% 1.8% ;
-    text-transform: uppercase;
-    text-align: center;
-}       
-
-footer {
-    @extend header;
-    @extend .txt-shad;
-    padding: .9em 0 .9em 0;
-    color: white;
-    @include clearfix;
-        nav {
-            margin: 0 auto;
-            opacity: .8;
-                ul {padding: 1em;}
-                li {display: inline;
-                    margin: .3em;
-                    //padding-top: .575em;
-                    }
-        a {@extend %transition;
-          font-size: 2.1em;
-          text-decoration: none;
-          $text-shadow: .9px .9px .9px rgba(188, 221, 240, .8) !global;
-          color: rgba(150, 150, 150, 1);
-          padding: .4em;
-          }
-    }  
-}
-
-section {
-     height: 33em;
-        p {
-           text-align: center;
-           margin: 1em;}       
-}
-
-article {
-     height: 13em;
-        p {
-           text-align: center;
-           margin-top: 1em;}       
-}
-
-.gn {display: none;}
-
-.main {
-    margin: 0 auto;
-    maxwidth: 80em;
-    background-color: $color-main-background;
-}
-
-.line {
-    display: block;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: red;
-    font-size: 1.3em;
-    padding: .5em;
-    margin-top: 5em;
-    animation-name: line;
-    animation-duration: 8s;
-    animation-iteration-count: infinite; 
-}
-
-.design div{
-  //background-image: url("../images/design.jpg");  
-  //background-size: cover;
-  //opacity: .6;
-  width: 95%;
-  margin: auto;
-}
-/*
-.calc {
-   background-image: url("../images/calc.jpg");
-   background-size: cover;
-}
-
-.sched {
-    background-image: url("../images/sched.jpg");
-    background-size: cover;
-}
-*/
-
-.logo{
-    float: left;
-    letter-spacing: .309em;
-        a {text-decoration: none;
-           color: white;}
-}
-
-
-        
-.nav-top {
-    @extend .txt-shad;
-    line-height: 2.5;
-    font-size: 124%;
-        a {text-decoration: none;
-           display: block;
-           color: rgba(255,255,255, .975);}
-        li {padding-left: 2%;
-            text-transform: uppercase;
-            letter-spacing: .103em;
-            
-                      
-                    &:hover {@extend %transition;
-                         color: $color-a-transition;
-                         opacity: .85;}
-               }
-        li:first-child {background-color: lighten($color-header, 43%);}
-        li:nth-child(2){background-color: lighten($color-header, 33%);}
-        li:nth-child(n+3){background-color: lighten($color-header, 23%);}
-        li:last-child {background-color: lighten($color-header, 13%);}
-
-        }
-
-                                                    
-.nav-hdr {
-     a {color: rgba(255, 255, 255, .975);
-        text-decoration: none;}
-}
-                    
-.nav-toggle {
-    float: right;
-    text-shadow: $text-shadow;
-    font-size: 1.6em;
-    padding: .2em;
-    transition: ease .5s;
-        &:before {
-            content:'≡';}
-        &:hover {
-            text-shadow: $text-shadow-toggle-hover;}
-        &:active{
-            transform: rotate(90deg);
-            }
-}
-
-.work {
-    @extend %transition;
-    background-color: rgba(150,150,100, .5);
-        li {
-            @extend .txt-shad;
-            text-align: center;
-            text-transform: uppercase;
-            list-style: none;
-            line-height: 2em;
-            font-size: 140%;
-
-            margin:  auto;
-            padding: 1em 0em 1em 0em;
-            width: 60%;
-            height: 1em;           text-shadow: $text-shadow;
-                // &:before,  {
-                  //  content:'∿';}
-            }
-          a {text-decoration: none;
-             padding: .3em;}
-}
-
-.about {
-    background-image: url("../images/city.jpg");
-    background-size: cover;
-    opacity: .6;
-}  
-
-.nav-top a:hover, .contact a:hover{
-      color: $color-a-transition;
-      }
-
-.txt-shad {
-      text-shadow: $text-shadow;
-}
-
-#services {background-color: lighten($color-main-background, 11%);}
-
-#work {background-color: lighten($color-main-background, 3%);}
-
-#contact {
-    background-color: lighten($color-main-background, 10%);
-    margin: 0 auto;
-}
-
-.toTop>a:before {
-  content: '↑';
-  font-size: 2em;
-  font-weight: 700;
-  color: #0D2030;;
-  position: fixed;
-  bottom: 1em;
-  right: .6em; 
-  padding: .25em;
-  //line-height: 1em;
-  z-index: 10;
-  text-shadow: 0.9px 0.9px 0.9px rgba(228, 114, 37, 0.8);;
-  @extend %transition;
-    &:hover{color: saturate(#47b3bd, 91%);}
-}
-
-@include mq(xs) {
-    html {font-size: 90%;}
-}
-
-@include mq(s) {
-    html {font-size: 110%;}
-} 
-
-@include mq(m) {
-    html{font-size: 120%;}
-}
-
-@include mq(ml) {
-  .nav-top {display: none;}
-}
-
-@include mq(lg) {
-    html{font-size: 130%;}
-    .nav-top {
-        li{text-align: center;
-          letter-spacing: .206em;
-          float: left;
-          width: 25%;}
-    }
-    .nav-toggle {display: none;}
-    .logo {float:none;
-            letter-spacing: .618em;}
-}
-
-@include mq(xl) {
-    html{font-size: 140%;}
-}
+@import 'config';
+@import 'mixin';
+@import 'base';
+@import 'button';
+@import 'mediaQueries';
+@import 'layout';
+@import 'typography';
+@import 'animation-transition';
